--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,3 +44,37 @@ body {
   width: 80%;
   object-fit: contain;
 }
+.headContainer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-right: 10rem;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+}
+
+.box {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  background-color: red;
+  animation: moveBackAndForth 2s infinite;
+}
+
+@keyframes moveBackAndForth {
+  0% {
+    left: 0;
+  }
+  50% {
+    left: 20px;
+  }
+  100% {
+    left: 0;
+  }
+}
